--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ dotenvy = "0.15"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.0", features = ["full"] }
