--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,13 @@ dotenvy = "0.15"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
+
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tonic = { version = "0.12.3", features = ["tls"] }
+prost = "0.13"
+
+
+lnd_grpc_rust = "2.8.0"
+
+[build-dependencies]
+tonic-build = "0.12.3"
