--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ prost = "0.13"
 
 
 lnd_grpc_rust = "2.8.0"
+log = "0.4.22"
+env_logger = "0.11.5"
+hex = "0.4.3"
 
 [build-dependencies]
 tonic-build = "0.12.3"
