--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish to Crates.io
+name: Build, Release, and Publish
 
 on:
   push:
@@ -6,11 +6,70 @@ on:
       - 'v*'
 
 jobs:
-  publish:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        target:
+          [x86_64-unknown-linux-gnu, x86_64-apple-darwin, x86_64-pc-windows-gnu]
 
     steps:
+      # Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Set up Rust
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+
+      # Install dependencies for cross-compilation (if necessary)
+      - name: Install dependencies
+        if: matrix.os == 'windows-latest'
+        run: rustup target add ${{ matrix.target }}
+
+      # Build the binary
+      - name: Build application
+        run: cargo build --release --target ${{ matrix.target }}
+
+      # Upload the binary as a release asset
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/${{ matrix.target }}/release/amboss-magma-bot
+          asset_name: amboss-magma-bot-${{ matrix.target }}
+          asset_content_type: application/octet-stream
+
+  release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    steps:
       # Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Create GitHub Release
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  publish:
+    name: Publish to crates.io
+    runs-on: ubuntu-latest
+    needs: release # Ensure release is created first
+    steps:
+      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
