--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,65 +6,32 @@ on:
       - 'v*'
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        target:
-          [x86_64-unknown-linux-gnu, x86_64-apple-darwin, x86_64-pc-windows-gnu]
-
-    steps:
-      # Checkout the code
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Set up Rust
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-
-      # Install dependencies for cross-compilation (if necessary)
-      - name: Install dependencies
-        if: matrix.os == 'windows-latest'
-        run: rustup target add ${{ matrix.target }}
-
-      # Build the binary
-      - name: Build application
-        run: cargo build --release --target ${{ matrix.target }}
-
-      # Upload the binary as a release asset
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/${{ matrix.target }}/release/amboss-magma-bot
-          asset_name: amboss-magma-bot-${{ matrix.target }}
-          asset_content_type: application/octet-stream
-
   release:
-    name: Create GitHub Release
+    name: release ${{ matrix.target }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+            static_linking: true
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz tar.zst
+            static_linking: false
+          - target: x86_64-apple-darwin
+            archive: zip
+            static_linking: true
     steps:
-      # Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Create GitHub Release
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        with:
-          tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.4.5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
+          STATIC_LINKING: ${{ matrix.static_linking }}
 
   publish:
     name: Publish to crates.io
