--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ log = "0.4.22"
 env_logger = "0.11.5"
 hex = "0.4.3"
 
+openssl = { version = "0.10", features = ["vendored"] }
+
 [build-dependencies]
 tonic-build = "0.12.3"
