--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,23 +4,27 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-graphql_client = "0.14"
-dotenvy = "0.15"
-reqwest = { version = "0.11", features = ["blocking", "json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-tonic = { version = "0.12.3", features = ["tls"] }
-prost = "0.13"
-
-
-lnd_grpc_rust = "2.8.0"
-log = "0.4.22"
-env_logger = "0.11.5"
+# Misc:
+log = "0.4"
+env_logger = "0.11"
+dirs = "6.0"
+async-trait = "0.1"
 hex = "0.4.3"
 
-openssl = { version = "0.10", features = ["vendored"] }
+# Config:
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
+
+# GRPC:
+tonic = "0.13"
+prost = "0.13"  
+tokio = { version = "1", features = ["full"] }   
+lnd_grpc_rust = "2.10"
+
+# GraphQL:
+graphql_client= "0.14.0"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+serde_json = "1.0"
 
 [build-dependencies]
-tonic-build = "0.12.3"
+tonic-build = "0.13"
