--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,21 @@ tonic = "0.13"
 prost = "0.13"  
 tokio = { version = "1", features = ["full"] }   
 lnd_grpc_rust = "2.10"
+openssl = { version = "0.10", features = ["vendored"] }
 
 # GraphQL:
 graphql_client= "0.14.0"
-reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde_json = "1.0"
+reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"] } 
+
 
 [build-dependencies]
 tonic-build = "0.13"
+prost-build = "0.13"
+protoc-bin-vendored = "3"
+
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = true          # Link Time Optimization
+codegen-units = 1   # Better optimization, slower compile
+strip = "symbols"   # Strip symbols (stable as of Rust 1.59)
