--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Rust
-        uses: actions/setup-rust@v1
+        uses: actions-rs/toolchain@v1
         with:
-          rust-version: stable
-          targets: ${{ matrix.target }}
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
 
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
