--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,15 +10,19 @@ on:
 jobs:
   build:
     name: Build and Package
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        target:
-          - x86_64-unknown-linux-gnu
-          - aarch64-unknown-linux-gnu
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
-          - x86_64-pc-windows-gnu
+        include:
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+          - target: x86_64-apple-darwin
+            os: macos-14
+          - target: x86_64-pc-windows-gnu
+            os: windows-latest
+
+    runs-on: ${{ matrix.os }}
 
     outputs:
       release_tag: ${{ steps.set_tag.outputs.release_tag }}
@@ -44,31 +48,23 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install dependencies
-        if: matrix.target == 'x86_64-unknown-linux-gnu' || matrix.target == 'aarch64-unknown-linux-gnu'
+      - name: Install Linux dependencies
+        if: runner.os == 'Linux'
         run: |
           sudo apt update
           sudo apt install -y pkg-config libssl-dev protobuf-compiler
 
-      - name: Install cross for non-host targets
-        if: matrix.target != 'x86_64-unknown-linux-gnu'
-        run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Build binary
-        run: |
-          if [ "${{ matrix.target }}" = "x86_64-unknown-linux-gnu" ]; then
-            cargo build --release --target ${{ matrix.target }}
-          else
-            cross build --release --target ${{ matrix.target }}
-          fi
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Package binary
+        shell: bash
         run: |
           BIN_NAME=amboss-magma-bot
           TARGET=${{ matrix.target }}
           OUT_DIR=release-${TARGET}
           mkdir -p $OUT_DIR
-          cp target/${TARGET}/release/$BIN_NAME* $OUT_DIR/
+          cp target/${TARGET}/release/${BIN_NAME}* $OUT_DIR/
           tar -czvf ${BIN_NAME}-${TARGET}.tar.gz -C $OUT_DIR .
 
       - name: Upload artifact
@@ -82,6 +78,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     if: github.ref_type == 'tag' || github.ref == 'refs/heads/master'
+
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
