--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,20 +9,7 @@ on:
 
 jobs:
   build:
-    name: Build and Package
-    strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-14
-          - target: x86_64-pc-windows-gnu
-            os: windows-latest
-
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     outputs:
       release_tag: ${{ steps.set_tag.outputs.release_tag }}
@@ -36,66 +23,50 @@ jobs:
         id: set_tag
         shell: bash
         run: |
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
             echo "release_tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
             echo "is_tag=true" >> $GITHUB_OUTPUT
           else
-            echo "release_tag=pre-${{ github.sha }}" >> $GITHUB_OUTPUT
+            echo "release_tag=pre-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
             echo "is_tag=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install OpenSSL (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install openssl@3
-
-      - name: Set OpenSSL env (macOS)
-        if: runner.os == 'macOS'
-        shell: bash
-        run: |
-          echo "OPENSSL_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
-          echo "OPENSSL_INCLUDE_DIR=$(brew --prefix openssl@3)/include" >> $GITHUB_ENV
-          echo "OPENSSL_LIB_DIR=$(brew --prefix openssl@3)/lib" >> $GITHUB_ENV
-          echo "PKG_CONFIG_PATH=$(brew --prefix openssl@3)/lib/pkgconfig" >> $GITHUB_ENV
-
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
+      - name: Install dependencies
         run: |
           sudo apt update
           sudo apt install -y pkg-config libssl-dev protobuf-compiler
 
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: x86_64-unknown-linux-gnu
+
       - name: Build
-        run: cargo build --release --target ${{ matrix.target }}
+        run: cargo build --release --target x86_64-unknown-linux-gnu
 
       - name: Package binary
         shell: bash
         run: |
           BIN_NAME=amboss-magma-bot
-          TARGET=${{ matrix.target }}
+          TARGET=x86_64-unknown-linux-gnu
           OUT_DIR=release-${TARGET}
           mkdir -p $OUT_DIR
-          cp target/${TARGET}/release/${BIN_NAME}* $OUT_DIR/
+          cp target/${TARGET}/release/${BIN_NAME} $OUT_DIR/
           tar -czvf ${BIN_NAME}-${TARGET}.tar.gz -C $OUT_DIR .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.target }}
-          path: amboss-magma-bot-${{ matrix.target }}.tar.gz
+          name: linux-artifact
+          path: amboss-magma-bot-x86_64-unknown-linux-gnu.tar.gz
 
   release:
-    name: Create GitHub Release
     needs: build
     runs-on: ubuntu-latest
     if: github.ref_type == 'tag' || github.ref == 'refs/heads/master'
 
     steps:
-      - name: Download all artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
