--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,9 @@ reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"] }
 tonic-build = "0.13"
 prost-build = "0.13"
 protoc-bin-vendored = "3"
+
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = true          # Link Time Optimization
+codegen-units = 1   # Better optimization, slower compile
+strip = "symbols"   # Strip symbols (stable as of Rust 1.59)
