feat: Add step to strip release binary for size optimization

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,10 @@ jobs:
           fi
         shell: bash
 
+      - name: Strip release binary
+        run: |
+          strip target/${{ matrix.target }}/release/amboss-magma-bot
+
       - name: Package binary
         shell: bash
         run: |
